--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
     "compilerOptions": {
       "outDir": "./dist/",
+    // Подсвечивает все места где не указан тип
+    // Однако это не означает, что теперь вовсе нельзя использовать any.
+    // Это означает лишь, что в подобных ситуация разработчик должен явно писать any,
       "noImplicitAny": true,
       "module": "ESNext",
       "target": "es5",
       "jsx": "react",
       "allowJs": true,
       "moduleResolution": "node",
+      "baseUrl": ".",
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true
     },
