--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "noImplicitAny": true,
       "module": "ESNext",
       "target": "es5",
-      "jsx": "react",
+      "jsx": "react-jsx",
       "allowJs": true,
       "moduleResolution": "node",
       "esModuleInterop": true,
